KUDU-373. pstack child process should share parent's stdout

Resolves an issue where a large pstack output would exceed the pipe
buffer, resulting in the child process (pstack) writing to a reader
process who was stopped due to the pstack.

Change-Id: I6bf9c35cab11fb02086ca61128985bf5cc47c461
Reviewed-on: http://gerrit.ent.cloudera.com:8080/3280
Reviewed-by: Todd Lipcon <todd@cloudera.com>
Tested-by: Michael Percy <mpercy@cloudera.com>